bin_PROGRAMS = 6scan

6scan_SOURCES = \
  scanner/6scan.cpp \
  scanner/6config.cpp \
  scanner/icmp.cpp \
  scanner/iplist.cpp \
  scanner/listener.cpp \
  scanner/listener6.cpp \
  scanner/mac.cpp \
  scanner/net.cpp \
  scanner/trace.cpp \
  scanner/trace4.cpp \
  scanner/trace6.cpp \
  scanner/util.cpp \
  strategy/strategy.cpp \
  strategy/download.cpp \
  strategy/patricia.cpp \
  strategy/tree.cpp \
  strategy/util.cpp \
  libcperm/cperm.c \
  libcperm/prefix.c \
  libcperm/cycle.c \
  libcperm/ciphers/rc5.c \
  libcperm/ciphers/rc5-16.c \
  libcperm/ciphers/speck.c

include_HEADERS = \
  scanner/6scan.h \
  scanner/6config.h \
  scanner/icmp.h \
  scanner/mac.h \
  scanner/iplist.h \
  scanner/stats.h \
  scanner/trace.h \
  strategy/strategy.h \
  strategy/download.h \
  strategy/tree.h \
  strategy/patricia.h \
  libcperm/cperm.h \
  libcperm/cperm-internal.h \
  libcperm/cycle.h \
  libcperm/feistel.h \
  libcperm/prefix.h \
  libcperm/ciphers/rc5-16.h \
  libcperm/ciphers/rc5.h \
  libcperm/ciphers/speck.h